2008-03-05  Jari Aalto  <jari.aalto@cante.net>

	REFACTORING: Convert all $LS, $MV etc variabales into
	regular calls in series of commit.s

	[ Commit: 0a6b221 below ]

	* bin/cygbuild.pl: (HELP::QUICK OVERVIEW): Remove key id
	and use $GPGKEY variable in example.

	* README: Adjust short description.
	(Version control information): Add new topic.
	(Version control information): Moved from INSTALL.
	(Dependencies): Moved from INSTALL.

	* INSTALL: (Install instructions): Mention /usr/local and
	prefix= setting. Remove verything but install instructions.

	* Makefile: (install-etc-main-symlink): disable installing
	/etc/cygbuild/programs.conf. No longer used.

	* bin/cygbuild.sh: (CygbuildInstallFixInterpreterPerl): Improve
	perl replace code. Display message only if something was done.
	(CygbuildInstallFixInterpreterMain): Move message to function
	`CygbuildInstallFixInterpreterPerl'.
	(CygbuildDefineGlobalCommands): Disable loading configuration
	file.
	(CygbuildBootVariablesGlobalEtcSet): Remove
	CYGBUILD_CONFIG_PROGRAMS (/etc/programs.conf).
	(CygbuildVersionControlType): Mention why ARCH and RCS are
	not tested.

2008-03-04  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::LIBRARY USAGE): Remove initial
	boot call.
	(TROUBLESHOOTING): Adjust paragraph wording.
	(Perl and double install is needed): Removed.
	(Install commands): Remove traces of --init-db option.
	(MISCELLANEOUS::Use of hardlinks): Add new topic.
	(MISCELLANEOUS::setup.hint should list all dependencies): Add new
	topic.

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckBinFiles): Add
	bash and gawk dependency check.
	(CygbuildIsDarcsPackage): New.
	(CygbuildIsMonotonePackage): New.
	(CygbuildVersionControlType): Add Monotone, Darcs detection.
	(CygbuildMain): Under CYGBUILD_LIB, boot few variables.
	(CygbuildCmdInstallCheckPerlFile): Add cp -l check.
	(CygbuildCmdInstallCheckShellFiles): Activate function.
	Funtion was unused due to file name bug in for-loop.